[project]
name = "video-downloader"
version = "0.1.1"
description = "M3U8 video downloader"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aria2p>=0.12.1",
    "paho-mqtt>=2.1.0",
    "toml>=0.10.2",
]

[project.scripts]
fetcher = "video.fetcher:main"
puller = "video.puller:main"

[tool.uv]
package = true
